# Auto-Num-Plate-Recognition

./: .dockerignore  .gitignore  ANPR_YOLO_Training_Colab_Run.ipynb  ANPR_YOLO_Training_Walkthrough.ipynb  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GIT_PUSH_GUIDE.md  INTERVIEW_GUIDE.md  LICENSE  PROJECT_MAP.md  QUICKSTART.md  README.md  RESULTS.md  Som_Tomar_Resume_Draft.md  TRAINING_GUIDE.md  api.py  app.py  docker-compose.yml  ocr_engine.py  packages.txt  plate_utils.py  pyproject.toml  requirements.txt
.github/workflows/: python-lint.yml
.streamlit/: config.toml
evaluation/: README.md
failure_samples/: README.md  labels_template.csv
scripts/: README.md  analyze_failure_samples.py  benchmark_anpr.py  build_val_labels.py  prepare_yolo_dataset.py  train_yolo_plate.py
tests/: README.md  test_plate_utils.py
